회전하는 큐
https://www.acmicpc.net/problem/1021